# programming-lab

./: .clang-format  .clang-tidy  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  Makefile  README.md  compose.bind.yaml  compose.copy-persist.yaml  compose.copy.yaml  compose.ephemeral.yaml  compose.gpu-legacy.yaml  compose.gpu.yaml  compose.persist.yaml  compose.yaml  pyproject.toml  rust-toolchain.toml
.agents/skills/: learn-by-practice
.cargo/: config.toml
.devcontainer/bind-ephemeral/: devcontainer.json
.devcontainer/bind-persistent/: devcontainer.json
.devcontainer/copy-ephemeral/: devcontainer.json
.devcontainer/copy-persistent/: devcontainer.json
.github/workflows/: quality.yml  sync-cuda-upgrade.yml
docker/: bashrc  cargo-config.toml  entrypoint.sh
docs/: cuda-upgrade.md  proxy-configuration.md  vscode-extensions.md  windows-container-validation.md
docs/triton-learning/: README.md
docs/triton-learning/dialogues/: 00-learning-workflow.md  01-vector-add-part2.md  01-vector-add.md
docs/triton-learning/lessons/: 01-vector-add.md
docs/triton-learning/references/: pytest-gpu-kernel-tests.md  raw-dialogue-export.md
docs/triton-learning/templates/: lesson-record.md
docs/triton-tutorials/: README.md  SOURCE.md
gpu/: __init__.py
gpu/cuda/: vector_add.cu
gpu/tilelang/: README.md  __init__.py  check_install.py
gpu/triton/: __init__.py  lesson01_vector_ops.py  lesson01_vector_ops_test.py  strided_vector_add.py  vector_add.py
leetcode/: __init__.py
leetcode/cpp/: 1.two-sum.cpp  131.palindrome-partitioning.cpp  17.letter-combinations-of-a-phone-number.cpp  2.add-two-numbers.cpp  22.generate-parentheses.cpp  39.combination-sum.cpp  46.permutations.cpp  51.n-queens.cpp  78.subsets.cpp  79.word-search.cpp  two_sum.cpp  two_sum.hpp
leetcode/python/: __init__.py  two_sum.py
leetcode/rust/two_sum/: Cargo.toml
leetcode/rust/two_sum/src/: lib.rs
scripts/: __init__.py  check_python_gpu.py  container.ps1  container.sh  doctor.sh  export_codex_dialogue.py  format.sh  init-env.sh  lint.sh  proxy-env.sh  test.sh  verify-env.sh
skills/learn-by-practice/: SKILL.md
skills/learn-by-practice/agents/: openai.yaml
skills/learn-by-practice/assets/: archive-index.md  lesson-record.md
skills/learn-by-practice/references/: dialogue-archive.md  learning-archive.md  practice-review-mastery.md
skills/learn-by-practice/scripts/: export_codex_dialogue.py  init_learning_archive.py
skills/learn-by-practice/tests/: test_scripts.py
tests/cpp/: test_two_sum.cpp
tests/python/: test_export_codex_dialogue.py  test_two_sum.py
