[project]
name = "programming-lab"
version = "0.1.0"
description = "LeetCode, CUDA, Triton and TileLang programming exercises"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.11.0",
  "numpy",
  "pandas>=3.0.3",
  "tilelang",
  "torch",
  "triton",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31,<2",
  "pre-commit>=4.2,<5",
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.uv]
package = false
python-preference = "only-managed"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["build", "target", "docs/triton-tutorials/official"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "PERF",
  "PIE",
  "RUF",
  "SIM",
  "UP",
  "W",
]
[tool.ruff.lint.isort]
known-first-party = ["gpu", "leetcode"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests/python"]

[tool.basedpyright]
include = ["leetcode/python", "tests/python"]
exclude = ["build", "target"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
